agroups: use new scaling tree